# computer-graphics-and-more

./: LICENSE  README.md
0_hello_triangle/: CMakeLists.txt  glad.c  main.cpp  run.sh
0_hello_triangle/Fileutil/: fileutil.cpp  fileutil.h
0_hello_triangle/Shader/: Program.cpp  Shader.cpp  Shader.h
0_hello_triangle/shaders/: hello.frag  hello.vert
0_hello_triangle/src/: main.cpp
0_hello_triangle/src/Geometry/: Geometry.cpp  Geometry.h
0_hello_triangle/src/Input/: Input.cpp  Input.h  KeyCodes.h
0_hello_triangle/src/Shader/: Program.cpp  Program.h  Shader.cpp  Shader.h
